--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,3 +1,14 @@
-<div class="container">
-  <app-character-card></app-character-card>
+<div class="container mt-3">
+  <div>
+    <div class="row">
+      <div class="col-6 mb-3" *ngFor="let character of characters">
+        <app-character-card [character]="character"></app-character-card>
+      </div>
+    </div>
+    <div>
+      <button type="button" (click)="goToPage(false)" *ngIf="currentPage > 0">Prev</button>
+      <span>{{ currentPage }}</span>
+      <button type="button" (click)="goToPage()" *ngIf="pageOffSet + pageLimit < totalCharacters">Next</button>
+    </div>
+  </div>
 </div>
