--- a/src/app/characters/character-card/character-card.component.html
+++ b/src/app/characters/character-card/character-card.component.html
@@ -9,6 +9,7 @@ Description,
   <div class="card-body">
     <h5 class="card-title">{{ character.name }}</h5>
     <p class="card-text">{{ character.description }}</p>
+    <p class="card-title"><b>Comics:</b></p>
     <ul>
       <li *ngFor="let comic of character.comics.items | slice:0:4;">
         <a [href]="setComicUrl(comic.resourceURI)" class="btn btn-primary" target="_blank">
