--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,14 +1,34 @@
-<div class="container mt-3">
-  <div>
+<div class="container">
+  <div class="container mt-3">
+    <form [formGroup]="filterForm">
+      <input type="text" name="name" formControlName="name">
+    </form>
+    <div class="row">
+      Order by:
+      <div class="col">
+        <span>A-Z
+          <span class="material-symbols-outlined">arrow_upward</span>
+          <span class="material-symbols-outlined">arrow_downward</span>
+        </span>
+      </div>
+      <div class="col">
+        <span>Date
+          <span class="material-symbols-outlined">arrow_upward</span>
+          <span class="material-symbols-outlined">arrow_downward</span>
+        </span>
+      </div>
+    </div>
+    <div class="row">
+      <button class="col-auto" type="button" (click)="goToPage(false)" *ngIf="currentPage > 0">Prev</button>
+      <span class="col-auto">{{ currentPage }}</span>
+      <button class="col-auto" type="button" (click)="goToPage()" *ngIf="(filterParams.offset ?? 0) + (filterParams.limit ?? 0) < totalCharacters">Next</button>
+    </div>
+  </div>
+  <div class="mt-3">
     <div class="row">
       <div class="col-6 mb-3" *ngFor="let character of characters">
         <app-character-card [character]="character"></app-character-card>
       </div>
-    </div>
-    <div>
-      <button type="button" (click)="goToPage(false)" *ngIf="currentPage > 0">Prev</button>
-      <span>{{ currentPage }}</span>
-      <button type="button" (click)="goToPage()" *ngIf="pageOffSet + pageLimit < totalCharacters">Next</button>
     </div>
   </div>
 </div>
