--- a/src/app/characters/character-card/character-card.component.html
+++ b/src/app/characters/character-card/character-card.component.html
@@ -4,17 +4,17 @@ Name,
 Description,
 4 assocciate comics
 -->
-<div class="card" style="width: 18rem;" *ngIf="character">
-  <img src="..." class="card-img-top" alt="character.name">
+<div class="card" style="width: 20rem;" *ngIf="character">
+  <img [src]="createImgUrl(character)" class="card-img-top" alt="character.name">
   <div class="card-body">
     <h5 class="card-title">{{ character.name }}</h5>
     <p class="card-text">{{ character.description }}</p>
     <p class="card-title"><b>Comics:</b></p>
     <ul>
       <li *ngFor="let comic of character.comics.items | slice:0:4;">
-        <a [href]="setComicUrl(comic.resourceURI)" class="btn btn-primary" target="_blank">
+        <span class="clickable" (click)="openComicModal(comic.resourceURI)">
           {{ comic.name }}
-        </a>
+        </span>
       </li>
     </ul>
   </div>
