--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -2,22 +2,12 @@
   <div class="container mt-3">
     <form [formGroup]="filterForm">
       <input type="text" name="name" formControlName="name">
+      <select formControlName="orderBy" class="form-select">
+        <option *ngFor="let option of orderOptions" [value]="option[0]">
+          {{ option[1] }}
+        </option>
+      </select>
     </form>
-    <div class="row">
-      Order by:
-      <div class="col">
-        <span>A-Z
-          <span class="material-symbols-outlined">arrow_upward</span>
-          <span class="material-symbols-outlined">arrow_downward</span>
-        </span>
-      </div>
-      <div class="col">
-        <span>Date
-          <span class="material-symbols-outlined">arrow_upward</span>
-          <span class="material-symbols-outlined">arrow_downward</span>
-        </span>
-      </div>
-    </div>
     <div class="row">
       <button class="col-auto" type="button" (click)="goToPage(false)" *ngIf="currentPage > 0">Prev</button>
       <span class="col-auto">{{ currentPage }}</span>
@@ -26,7 +16,7 @@
   </div>
   <div class="mt-3">
     <div class="row">
-      <div class="col-6 mb-3" *ngFor="let character of characters">
+      <div class="col-6 mb-3 d-flex justify-content-evenly" *ngFor="let character of characters">
         <app-character-card [character]="character"></app-character-card>
       </div>
     </div>
