Add favorites feature & comic modal

--- a/src/app/characters/character-card/character-card.component.html
+++ b/src/app/characters/character-card/character-card.component.html
@@ -6,7 +6,7 @@
     <p class="card-title"><b>Comics:</b></p>
     <ul>
       <li *ngFor="let comic of character.comics.items | slice:0:4;">
-        <span data-bs-toggle="modal" data-bs-target="#comicModal" class="clickable" (click)="setCurrentComic(comic.resourceURI)" [data-bs-comic]="comic">
+        <span class="clickable" (click)="setCurrentComic(comic.resourceURI)">
           {{ comic.name }}
         </span>
       </li>
@@ -14,18 +14,4 @@
   </div>
 </div>
 
-<div *ngIf="currentComic" class="modal fade" id="comicModal" aria-hidden="true" aria-labelledby="comicModal" tabindex="-1">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5">{{ currentComic.title }}</h1>
-      </div>
-      <div class="modal-body">
-        Show a second modal and hide this one with the button below.
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-primary" data-bs-dismiss="modal" aria-label="Close">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
+<app-comic-card [comic]="currentComic" [isOpen]="isComicModalOpen" (close)="closeComicModal()"></app-comic-card>
