--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
             <a class="nav-link" routerLink="characters">Characters</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" routerLink="characters/favorites">Favorites</a>
           </li>
         </ul>
       </div>
