Add favorite page

--- a/src/app/characters/favorites/favorites.component.html
+++ b/src/app/characters/favorites/favorites.component.html
@@ -1,1 +1,20 @@
-<p>favorites works!</p>
+<div class="container">
+  <div class="row mt-3">
+    <div *ngFor="let comic of favorites" class="col">
+      <div class="card" style="width: 20rem;">
+        <img style="width: 200px; margin-left: 18%" [src]="createImgUrl(comic)" class="card-img-top" alt="comic.title">
+        <div class="card-body">
+          <h5 class="card-title">
+            {{ comic.title }}
+            <span (click)="removeComic(comic)" class="material-symbols-outlined clickable" style="font-variation-settings: 'FILL' 1, 'wght' 100, 'GRAD' 0, 'opsz' 48;">
+              star
+            </span>
+          </h5>
+        </div>
+      </div>
+    </div>
+    <h6 *ngIf="favorites.length === 0" class="text-center">
+      No Favorites
+    </h6>
+  </div>
+</div>
