--- a/src/app/comics/comic-card/comic-card.component.html
+++ b/src/app/comics/comic-card/comic-card.component.html
@@ -3,7 +3,7 @@
   <div class="card-body">
     <h5 class="card-title">
       {{ comic.title }}
-      <span *ngIf="isFavorite(comic); else elseFavorite" (click)="addToFavorites(comic)" class="material-symbols-outlined clickable" style="font-variation-settings: 'FILL' 1, 'wght' 100, 'GRAD' 0, 'opsz' 48;">
+      <span *ngIf="isFavorite(comic); else elseFavorite" (click)="removeFromFavorites(comic)" class="material-symbols-outlined clickable" style="font-variation-settings: 'FILL' 1, 'wght' 100, 'GRAD' 0, 'opsz' 48;">
         star
       </span>
       <ng-template #elseFavorite>
