--- a/src/app/characters/favorites/favorites.component.html
+++ b/src/app/characters/favorites/favorites.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mt-3">
     <div *ngFor="let comic of favorites" class="col">
-      <div class="card" style="width: 20rem;">
+      <div class="card mt-2" style="width: 20rem;">
         <img style="width: 200px; margin-left: 18%" [src]="createImgUrl(comic)" class="card-img-top" alt="comic.title">
         <div class="card-body">
           <h5 class="card-title">
