--- a/src/app/characters/character-card/character-card.component.html
+++ b/src/app/characters/character-card/character-card.component.html
@@ -1,5 +1,5 @@
-<div class="card" style="width: 20rem;" *ngIf="character">
-  <img (click)="goToDetails(character)" [src]="createImgUrl(character)" class="clickable card-img-top" alt="character.name">
+<div class="card" *ngIf="character">
+  <img (click)="goToDetails(character)" [src]="createImgUrl(character)" class="mx-auto clickable card-img-top img-fluid" alt="character.name">
   <div class="card-body">
     <h5 class="card-title">{{ character.name }}</h5>
     <p class="card-text">{{ character.description }}</p>
@@ -12,7 +12,7 @@
       </li>
     </ul>
     <ng-template #elseComicItems>
-      <p class="card-title"><b>This character has not appeared in any comic yet.</b></p>
+      <p class="card-title">This character has not appeared in any comic yet.</p>
     </ng-template>
   </div>
 </div>
