--- a/src/app/characters/character-details/character-details.component.html
+++ b/src/app/characters/character-details/character-details.component.html
@@ -6,66 +6,28 @@
       <p class="col-5">{{ character.description }}</p>
     </div>
   </div>
-  <div class="row">
+  <div *ngIf="titles.length > 0" class="row">
     <h2>Movies & Series</h2>
     <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <div class="d-flex justify-content-center">
-            <div *ngFor="let title of titles">
-              <img (click)="openTitleModal(streamingPlatformsModal, title)" class="d-block img-fluid clickable" [src]="title.image_url" [alt]="title.name"/>
-            </div>
+          <div class="d-flex justify-content-center overflow-auto">
+            <img *ngFor="let title of titles" (click)="openTitleModal(streamingPlatformsModal, title)" class="d-block img-fluid clickable" [src]="title.image_url" [alt]="title.name"/>
           </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
   </div>
-  <div class="row">
+  <div *ngIf="comics.length > 0" class="row">
     <h2>Comics</h2>
     <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <div class="d-flex justify-content-center">
+          <div class="d-flex justify-content-center overflow-y-auto">
             <img (click)="openComicModal(comic)" *ngFor="let comic of comics" class="d-block img-fluid clickable" [src]="createComicImgUrl(comic)" [alt]="comic.title"/>
           </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-  </div>
-  <div class="row">
-    <h2>Comics</h2>
-    <div id="carouselExample" class="carousel slide">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="d-flex justify-content-center">
-            <img (click)="openComicModal(comic)" *ngFor="let comic of comics" class="d-block img-fluid clickable" [src]="createComicImgUrl(comic)" [alt]="comic.title"/>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
   </div>
 </div>
@@ -74,7 +36,7 @@
 
 <ng-template #streamingPlatformsModal let-modal>
 	<div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Watch {{ currentTitle?.name }} on:</h4>
+    <h4 class="modal-title" id="modal-basic-title">Watch <i>{{ currentTitle?.name }}</i> on:</h4>
 		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
 	</div>
 	<div class="modal-body">
@@ -83,8 +45,5 @@
         <a href="{{ source?.web_url }}" target="_blank">{{ source?.name }}</a>
       </li>
     </ul>
-	</div>
-	<div class="modal-footer">
-		<button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Save</button>
 	</div>
 </ng-template>
