--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,24 +1,38 @@
 <div class="container">
-  <div class="container mt-3">
-    <form [formGroup]="filterForm">
-      <input type="text" name="name" formControlName="name">
-      <select formControlName="orderBy" class="form-select">
+  <div class="mt-3">
+    <form [formGroup]="filterForm" class="d-flex">
+      <div class="mb-3 w-100">
+        <input name="name" formControlName="name" type="text" class="form-control" placeholder="Search character">
+      </div>
+      <select formControlName="orderBy" class="form-select w-auto h-50 ms-2">
         <option *ngFor="let option of orderOptions" [value]="option[0]">
           {{ option[1] }}
         </option>
       </select>
     </form>
-    <div class="row">
-      <button class="col-auto" type="button" (click)="goToPage(false)" *ngIf="currentPage > 0">Prev</button>
-      <span class="col-auto">{{ currentPage }}</span>
-      <button class="col-auto" type="button" (click)="goToPage()" *ngIf="(filterParams.offset ?? 0) + (filterParams.limit ?? 0) < totalCharacters">Next</button>
-    </div>
   </div>
   <div class="mt-3">
     <div class="row">
-      <div class="col-6 mb-3 d-flex justify-content-evenly" *ngFor="let character of characters">
+      <div class="col-6 mb-3" *ngFor="let character of characters">
         <app-character-card [character]="character"></app-character-card>
       </div>
     </div>
+  </div>
+  <div class="row container justify-content-evenly">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li (click)="goToPage(false)" [class]="{'clickable': currentPage > 0, 'page-itemclickable': true, 'disabled': currentPage <= 0}">
+          <a class="page-link" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="page-item"><a class="page-link">{{ currentPage + 1 }}</a></li>
+        <li (click)="goToPage()" [class]="{'clickable': (filterParams.offset ?? 0) + (filterParams.limit ?? 0) < totalCharacters, 'page-itemclickable': true, 'disabled': (filterParams.offset ?? 0) + (filterParams.limit ?? 0) >= totalCharacters}">
+          <a class="page-link" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
   </div>
 </div>
