--- a/src/app/comics/comic-card/comic-card.component.html
+++ b/src/app/comics/comic-card/comic-card.component.html
@@ -12,7 +12,9 @@
         </span>
       </ng-template>
     </h5>
-    <p class="card-text">{{ comic.description }}</p>
+    <p class="card-text">
+      {{ comic.description }}
+    </p>
     <p *ngIf="!comic.description || comic.description.length <= 0" class="card-text">No description available.</p>
   </div>
 </div>
