--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div class="row container justify-content-evenly">
+  <div class="row container justify-content-evenly pagination">
     <nav aria-label="Page navigation example">
       <ul class="pagination">
         <li (click)="goToPage(false)" [class]="{'clickable': currentPage > 0, 'page-itemclickable': true, 'disabled': currentPage <= 0}">
