--- a/src/app/characters/character-card/character-card.component.html
+++ b/src/app/characters/character-card/character-card.component.html
@@ -1,5 +1,5 @@
-<div class="card" *ngIf="character">
-  <img (click)="goToDetails(character)" [src]="createImgUrl(character)" class="mx-auto clickable card-img-top img-fluid" alt="character.name">
+<div class="card h-100" *ngIf="character">
+  <img (click)="goToDetails(character)" [src]="createImgUrl(character)" class="mt-1 mx-auto clickable card-img-top img-fluid" alt="character.name">
   <div class="card-body">
     <h5 class="card-title">{{ character.name }}</h5>
     <p class="card-text">{{ character.description }}</p>
