--- a/src/app/characters/character-card/character-card.component.scss
+++ b/src/app/characters/character-card/character-card.component.scss
@@ -1,3 +1,9 @@
 img {
   max-width: 30rem;
 }
+
+.card {
+  //background: rgba(255, 255, 255, 0.9);
+  background: rgba(0, 0, 0, 0.8);
+  color: white !important;
+}
